# DjangoTutorial

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
DjangoTutorial/: settings.py  urls.py
forms/: models.py  urls.py  views.py
forms/templates/: contact.html  contact_form.html  name.html
