[project]
name = "DjangoTutorial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FrankHuang", email = "pingrunhuang@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
